<resources>
    <string name="app_name">TravelApp</string>

    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>

    <string-array name="carousel_titles">
        <item>Find Your Perfect Place</item>
        <item>Discover Your Travel Style</item>
        <item>Traveler’s Choice</item>
    </string-array>

    <string-array name="carousel_subtitles">
        <item>Search for any place You want to visit in Indonesia, from cities and islands to beaches and volcanoes.</item>
        <item>Discover your travel style and get personalized recommendations based on your preferences and interests.</item>
        <item>Shows you the best places to visit in Indonesia, based on the highest ratings from other travelers.</item>
    </string-array>

    <array name="carousel_drawables">
        <item>@drawable/iv_onboarding_1</item>
        <item>@drawable/iv_onboarding_2</item>
        <item>@drawable/iv_onboarding_3</item>
    </array>

    <string name="login_page_title">Welcome Back!</string>
    <string name="register_page_title">Create an account.</string>
    <string name="tv_name_hint">Please input your full name!</string>
    <string name="tv_name_email">Please input your email address!</string>
    <string name="tv_name_password">Please input your password!</string>

    <string name="btn_get_started">Get Started</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>

    <string name="to_login_alternate">Already have an account?</string>
    <string name="to_register_alternate">Dont have any account?</string>
    <string name="btn_skip">Skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_notification">Title Notification</string>
    <string name="description_notification">Description Notification</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>

    <string name="btn_view_more">View More</string>
    <string name="tv_greeting">Hi,</string>
    <string name="tv_username">User</string>
    <string name="tv_home_title">Where do</string>
    <string name="tv_home_subtitle">you want to go?</string>
    <string name="tv_nearby_item_title">Nearby Treasures</string>
    <string name="tv_rating_title">Rating</string>
    <string name="tv_location_title">Location</string>
    <string name="tv_price_title">Price</string>
    <string name="tv_overview_title">Overview</string>
    <string name="tv_categories_title">Categories</string>
    <string name="tv_item_name">Item Name</string>
    <string name="tv_item_category">Item Category</string>
    <string name="tv_item_location">Item Location</string>
    <string name="tv_item_price">Item Price</string>
    <string name="tv_item_rating">5.0</string>
    <string name="search_location">Search Location</string>
    <string name="tv_ask_search">Silahkan masukkan kata kunci terlebih dahulu</string>
    <string name="tv_error">Maaf, tidak ada tempat yang ditemukan!</string>
    <string name="title_top_destinations">Top Destinations</string>
    <string name="category">Category:</string>
    <string name="logout">Logout</string>

    <string name="tv_error_input_blank">Field could not be empty!</string>
    <string name="tv_error_password_mismatch">Password did not match!</string>

</resources>